src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
    @apply bg-body;
    font-family: Fira, serif;
    overflow: hidden !important;
}

pre:focus-visible{
    @apply border border-stroke;
    outline: none;
}
/* width */
::-webkit-scrollbar {
    width: 4px;
}

/* Track */
::-webkit-scrollbar-track {
    @apply bg-background;
}

/* Handle */
::-webkit-scrollbar-thumb {
    @apply bg-secondary-50;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #555;
}


.container {
    display: block;
    position: relative;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    padding-left: 24px;
    margin: 2px 2px;
    cursor: pointer;
}

/* Hide the browser's default checkbox */
.container input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
    height: 0;
    width: 0;
}

/* Create a custom checkbox */
.checkmark {
    @apply border border-stroke;
    position: absolute;
    top: 0;
    left: 0;
    height: 16px;
    width: 16px;
}

/* On mouse-over, add a grey background color */
.container:hover input ~ .checkmark {
}

/* When the checkbox is checked, add a blue background */
.container input:checked ~ .checkmark {
    @apply bg-stroke;
}

/* Create the checkmark/indicator (hidden when not checked) */
.checkmark:after {
    content: "";
    position: absolute;
    display: none;
}

/* Show the checkmark when checked */
.container input:checked ~ .checkmark:after {
    display: block;
}

